[package]
name = "delay_bms_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hex = "0.4"
rand = "0.8"
uuid = "1.2"
pretty_env_logger = "0.4"
btleplug = "0.10"
tokio = { version = "1.23", features = ["full"] }
anyhow = "1.0"