[package]
name = "mqtt_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.0", features = ["derive"]}
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.10"
rumqttc = "0.18"
tokio = { version = "1.0", features = ["full"] }

bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "array-impls"] }