[package]
name = "victron_solar_monitor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.0", features = ["derive"]}
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
vedirect = { path = "../vedirect-rs", features=["derive"] }
serialport = "4.2"
env_logger = "0.10"
rumqttc = { version = "0.22", features = ["url"] }
